Week1Assignment1--Imagereader

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,10 @@
 ################################################################################
 
 /Week1Ass1/x64/Release/Week1Ass1.tlog
+/.vs/cv-assignment/v15
+/Week1Ass1/x64/Release
+/x64/Release
+/Week1Ass1/Week1Ass1.vcxproj
+/Week1Ass1/Week1Ass1.vcxproj.filters
+/Week1Ass1/Week1Ass1.vcxproj.user
+/Week1Ass1/image.jpg
