--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,13 @@
 /Week1Ass1/Week1Ass1.vcxproj.filters
 /Week1Ass1/Week1Ass1.vcxproj.user
 /Week1Ass1/image.jpg
+/Week1Ass2/Week1Ass2.vcxproj.user
+/Week1Ass2/Week1Ass2.vcxproj.filters
+/Week1Ass2/Week1Ass2.vcxproj
+/Week1Ass2/x64/Release
+/Week1Ass2/image.jpg
+/Week1Ass3/x64/Release
+/Week1Ass3/Week1Ass3.vcxproj.user
+/Week1Ass3/Week1Ass3.vcxproj.filters
+/Week1Ass3/Week1Ass3.vcxproj
+/Week1Ass3/image.jpg
