--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,8 @@
 /Week1Ass3/Week1Ass3.vcxproj.filters
 /Week1Ass3/Week1Ass3.vcxproj
 /Week1Ass3/image.jpg
+/Week1Ass4/x64/Release
+/Week1Ass4/Week1Ass4.vcxproj.user
+/Week1Ass4/Week1Ass4.vcxproj.filters
+/Week1Ass4/Week1Ass4.vcxproj
+/Week1Ass4/image.jpg
