Update Week2-Assignment: Image depart\Video cap\rect\Histogram

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,30 @@
 /Week1Ass4/Week1Ass4.vcxproj.filters
 /Week1Ass4/Week1Ass4.vcxproj
 /Week1Ass4/image.jpg
+/cv-assignment.sln
+/Week2Ass1/x64/Release
+/Week2Ass1/Week2Ass1.vcxproj.user
+/Week2Ass1/Week2Ass1.vcxproj.filters
+/Week2Ass1/Week2Ass1.vcxproj
+/Week2Ass1/image.jpg
+/Week2Ass2/x64/Release
+/Week2Ass2/Week2Ass2.vcxproj.user
+/Week2Ass2/Week2Ass2.vcxproj.filters
+/Week2Ass2/Week2Ass2.vcxproj
+/Week2Ass1/图片1.png
+/Week2Ass3/x64/Release
+/Week2Ass4/x64/Release
+/Week2Ass5/x64/Release
+/Week2Ass3/Week2Ass3.vcxproj.user
+/Week2Ass3/Week2Ass3.vcxproj.filters
+/Week2Ass3/Week2Ass3.vcxproj
+/Week2Ass3/image.jpg
+/Week2Ass5/Week2Ass5.vcxproj.user
+/Week2Ass5/Week2Ass5.vcxproj.filters
+/Week2Ass5/Week2Ass5.vcxproj
+/Week2Ass5/image.jpeg
+/Week2Ass4/Week2Ass4.vcxproj.user
+/Week2Ass4/Week2Ass4.vcxproj.filters
+/Week2Ass4/Week2Ass4.vcxproj
+/Week2Ass4/image.jpg
+/Week2Ass5/image.jpg
