Update Week3 Assignment: Usage of Inrange , threshold, adaptiveThreshold , call_back function to implemente Binarization.

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,22 @@
 /Week2Ass4/Week2Ass4.vcxproj
 /Week2Ass4/image.jpg
 /Week2Ass5/image.jpg
+/Week3Ass1/x64/Release
+/Week3Ass1/Week3Ass1.vcxproj.user
+/Week3Ass1/Week3Ass1.vcxproj.filters
+/Week3Ass1/Week3Ass1.vcxproj
+/Week3Ass2/Week3Ass2.vcxproj.user
+/Week3Ass2/Week3Ass2.vcxproj.filters
+/Week3Ass2/Week3Ass2.vcxproj
+/Week3Ass2/x64/Release
+/Week3Ass2/image.jpg
+/Week2Ass1/1.jpg
+/Week3Ass3/x64/Release
+/Week3Ass4/x64/Release
+/Week3Ass3/Week3Ass3.vcxproj.user
+/Week3Ass3/Week3Ass3.vcxproj.filters
+/Week3Ass3/Week3Ass3.vcxproj
+/Week3Ass4/Week3Ass4.vcxproj.user
+/Week3Ass4/Week3Ass4.vcxproj.filters
+/Week3Ass4/Week3Ass4.vcxproj
+/Week3Ass3/image.jpg
