Update Week4Assignment : morphology_operation , auto_counter for coins,PCB layer,clips

--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,22 @@
 /Week3Ass4/Week3Ass4.vcxproj.filters
 /Week3Ass4/Week3Ass4.vcxproj
 /Week3Ass3/image.jpg
+/Week3Ass2/1.jpg
+/Week4Ass1/x64/Release
+/Week4Ass1/Week4Ass1.vcxproj.user
+/Week4Ass1/Week4Ass1.vcxproj.filters
+/Week4Ass1/Week4Ass1.vcxproj
+/Week4Ass1/1.jpg
+/Week4Ass1/coins.png
+/Week4Ass2/x64/Release
+/Week4Ass2/Week4Ass2.vcxproj.user
+/Week4Ass2/Week4Ass2.vcxproj.filters
+/Week4Ass2/Week4Ass2.vcxproj
+/Week4Ass3/x64/Release
+/Week4Ass3/Week4Ass3.vcxproj.user
+/Week4Ass3/Week4Ass3.vcxproj.filters
+/Week4Ass3/Week4Ass3.vcxproj
+/Week4Ass4/x64/Release
+/Week4Ass4/Week4Ass4.vcxproj.user
+/Week4Ass4/Week4Ass4.vcxproj.filters
+/Week4Ass4/Week4Ass4.vcxproj
