Update Week5Ass: Some bulr function, simple dermabrasion

--- a/.gitignore
+++ b/.gitignore
@@ -90,3 +90,27 @@
 /Week4Ass4/Week4Ass4.vcxproj.user
 /Week4Ass4/Week4Ass4.vcxproj.filters
 /Week4Ass4/Week4Ass4.vcxproj
+/Week5Ass1/x64/Release
+/Week5Ass1/Week5Ass1.vcxproj.user
+/Week5Ass1/Week5Ass1.vcxproj.filters
+/Week5Ass1/Week5Ass1.vcxproj
+/Week5Ass2/x64/Release
+/Week5Ass2/Week5Ass2.vcxproj.user
+/Week5Ass2/Week5Ass2.vcxproj.filters
+/Week5Ass2/Week5Ass2.vcxproj
+/Week5Ass3/x64/Release
+/Week5Ass3/Week5Ass3.vcxproj.user
+/Week5Ass3/Week5Ass3.vcxproj.filters
+/Week5Ass3/Week5Ass3.vcxproj
+/WeekAss4/x64/Release
+/WeekAss4/WeekAss4.vcxproj.user
+/WeekAss4/WeekAss4.vcxproj.filters
+/WeekAss4/WeekAss4.vcxproj
+/Week5Ass4/x64/Release
+/Week5Ass5/x64/Release
+/Week5Ass5/Week5Ass5.vcxproj.user
+/Week5Ass5/Week5Ass5.vcxproj.filters
+/Week5Ass5/Week5Ass5.vcxproj
+/Week5Ass4/Week5Ass4.vcxproj.user
+/Week5Ass4/Week5Ass4.vcxproj.filters
+/Week5Ass4/Week5Ass4.vcxproj
