Update Week6 Ass

--- a/.gitignore
+++ b/.gitignore
@@ -114,3 +114,23 @@
 /Week5Ass4/Week5Ass4.vcxproj.user
 /Week5Ass4/Week5Ass4.vcxproj.filters
 /Week5Ass4/Week5Ass4.vcxproj
+/Week6Ass1/x64/Release
+/Week6Ass2/x64/Release
+/Week6Ass3/x64/Release
+/Week6Ass1/Week6Ass1.vcxproj.user
+/Week6Ass1/Week6Ass1.vcxproj.filters
+/Week6Ass1/Week6Ass1.vcxproj
+/Week6Ass2/Week6Ass2.vcxproj.user
+/Week6Ass2/Week6Ass2.vcxproj.filters
+/Week6Ass2/Week6Ass2.vcxproj
+/Week6Ass3/Week6Ass3.vcxproj.user
+/Week6Ass3/Week6Ass3.vcxproj.filters
+/Week6Ass3/Week6Ass3.vcxproj
+/Week6Ass4/x64/Release
+/Week6Ass5/x64/Release
+/Week6Ass4/Week6Ass4.vcxproj.user
+/Week6Ass4/Week6Ass4.vcxproj.filters
+/Week6Ass4/Week6Ass4.vcxproj
+/Week6Ass5/Week6Ass5.vcxproj.user
+/Week6Ass5/Week6Ass5.vcxproj.filters
+/Week6Ass5/Week6Ass5.vcxproj
