--- a/.gitignore
+++ b/.gitignore
@@ -134,3 +134,7 @@
 /Week6Ass5/Week6Ass5.vcxproj.user
 /Week6Ass5/Week6Ass5.vcxproj.filters
 /Week6Ass5/Week6Ass5.vcxproj
+/Week6Ass6/x64/Release
+/Week6Ass6/Week6Ass6.vcxproj.user
+/Week6Ass6/Week6Ass6.vcxproj.filters
+/Week6Ass6/Week6Ass6.vcxproj
