Update Week7Ass: lossless roation, HoughLines.

--- a/.gitignore
+++ b/.gitignore
@@ -138,3 +138,15 @@
 /Week6Ass6/Week6Ass6.vcxproj.user
 /Week6Ass6/Week6Ass6.vcxproj.filters
 /Week6Ass6/Week6Ass6.vcxproj
+/Week7Ass1/x64/Release
+/Week7Ass2/x64/Release
+/Week7Ass3/x64/Release
+/Week7Ass1/Week7Ass1.vcxproj.user
+/Week7Ass1/Week7Ass1.vcxproj.filters
+/Week7Ass1/Week7Ass1.vcxproj
+/Week7Ass2/Week7Ass2.vcxproj.user
+/Week7Ass2/Week7Ass2.vcxproj.filters
+/Week7Ass2/Week7Ass2.vcxproj
+/Week7Ass3/Week7Ass3.vcxproj.user
+/Week7Ass3/Week7Ass3.vcxproj.filters
+/Week7Ass3/Week7Ass3.vcxproj
