Update Week8Ass characteristic detect

--- a/.gitignore
+++ b/.gitignore
@@ -150,3 +150,17 @@
 /Week7Ass3/Week7Ass3.vcxproj.user
 /Week7Ass3/Week7Ass3.vcxproj.filters
 /Week7Ass3/Week7Ass3.vcxproj
+/Week8Ass1/x64/Release
+/Week8Ass1/Week8Ass1.vcxproj.user
+/Week8Ass1/Week8Ass1.vcxproj.filters
+/Week8Ass1/Week8Ass1.vcxproj
+/Week8Ass1/coin.png
+/Week8Ass2/x64/Release
+/Week8Ass3/x64/Release
+/Week8Ass2/Week8Ass2.vcxproj.user
+/Week8Ass2/Week8Ass2.vcxproj.filters
+/Week8Ass2/Week8Ass2.vcxproj
+/Week8Ass3/Week8Ass3.vcxproj.user
+/Week8Ass3/Week8Ass3.vcxproj.filters
+/Week8Ass3/Week8Ass3.vcxproj
+/Week8Ass3
