Update Week9Ass Hog-compare

--- a/.gitignore
+++ b/.gitignore
@@ -163,3 +163,9 @@
 /Week8Ass3/Week8Ass3.vcxproj.user
 /Week8Ass3/Week8Ass3.vcxproj.filters
 /Week8Ass3/Week8Ass3.vcxproj
+/Week9Ass2
+/Week9Ass3
+/Week9Ass1/x64/Release
+/Week9Ass1/Week9Ass1.vcxproj.user
+/Week9Ass1/Week9Ass1.vcxproj.filters
+/Week9Ass1/Week9Ass1.vcxproj
