Week10 Ass1 DFT iDFT demo

--- a/.gitignore
+++ b/.gitignore
@@ -169,3 +169,12 @@
 /Week9Ass1/Week9Ass1.vcxproj.user
 /Week9Ass1/Week9Ass1.vcxproj.filters
 /Week9Ass1/Week9Ass1.vcxproj
+/Week10Ass1/x64/Release
+/Week10Ass3
+/Week10Ass1/Week10Ass1.vcxproj.user
+/Week10Ass1/Week10Ass1.vcxproj.filters
+/Week10Ass1/Week10Ass1.vcxproj
+/Week10Ass2/Week10Ass2.vcxproj.user
+/Week10Ass2/Week10Ass2.vcxproj.filters
+/Week10Ass2/Week10Ass2.vcxproj
+/Week10Ass2
