Week10Ass2 Usage of DFT

--- a/.gitignore
+++ b/.gitignore
@@ -163,8 +163,6 @@
 /Week8Ass3/Week8Ass3.vcxproj.user
 /Week8Ass3/Week8Ass3.vcxproj.filters
 /Week8Ass3/Week8Ass3.vcxproj
-/Week9Ass2
-/Week9Ass3
 /Week9Ass1/x64/Release
 /Week9Ass1/Week9Ass1.vcxproj.user
 /Week9Ass1/Week9Ass1.vcxproj.filters
@@ -177,4 +175,4 @@
 /Week10Ass2/Week10Ass2.vcxproj.user
 /Week10Ass2/Week10Ass2.vcxproj.filters
 /Week10Ass2/Week10Ass2.vcxproj
-/Week10Ass2
+/Week10Ass2/x64/Release
