Update Week11Ass gamma\eqHist_3channels

--- a/.gitignore
+++ b/.gitignore
@@ -176,3 +176,20 @@
 /Week10Ass2/Week10Ass2.vcxproj.filters
 /Week10Ass2/Week10Ass2.vcxproj
 /Week10Ass2/x64/Release
+/Week10Ass2/testImages
+/Week11Ass/x64/Release
+/Week11Ass/Week11Ass.vcxproj.user
+/Week11Ass/Week11Ass.vcxproj.filters
+/Week11Ass/Week11Ass.vcxproj
+/Week11Ass1/x64/Release
+/Week11Ass2/x64/Release
+/Week11Ass3/x64/Release
+/Week11Ass1/Week11Ass1.vcxproj.user
+/Week11Ass1/Week11Ass1.vcxproj.filters
+/Week11Ass1/Week11Ass1.vcxproj
+/Week11Ass2/Week11Ass2.vcxproj.user
+/Week11Ass2/Week11Ass2.vcxproj.filters
+/Week11Ass2/Week11Ass2.vcxproj
+/Week11Ass3/Week11Ass3.vcxproj.user
+/Week11Ass3/Week11Ass3.vcxproj.filters
+/Week11Ass3/Week11Ass3.vcxproj
