Update Week12Ass, diff of background

--- a/.gitignore
+++ b/.gitignore
@@ -193,3 +193,12 @@
 /Week11Ass3/Week11Ass3.vcxproj.user
 /Week11Ass3/Week11Ass3.vcxproj.filters
 /Week11Ass3/Week11Ass3.vcxproj
+/Week12Ass1/x64/Release
+/Week12Ass2/x64/Release
+/Week12Ass1/Week12Ass1.vcxproj.user
+/Week12Ass1/Week12Ass1.vcxproj.filters
+/Week12Ass1/Week12Ass1.vcxproj
+/Week12Ass3
+/Week12Ass2/Week12Ass2.vcxproj.user
+/Week12Ass2/Week12Ass2.vcxproj.filters
+/Week12Ass2/Week12Ass2.vcxproj
