Update Week13Ass  some code for TemplateMatch.

--- a/.gitignore
+++ b/.gitignore
@@ -202,3 +202,11 @@
 /Week12Ass2/Week12Ass2.vcxproj.user
 /Week12Ass2/Week12Ass2.vcxproj.filters
 /Week12Ass2/Week12Ass2.vcxproj
+/Week13Ass1/x64/Release
+/Week13Ass1/Week13Ass1.vcxproj.user
+/Week13Ass1/Week13Ass1.vcxproj.filters
+/Week13Ass1/Week13Ass1.vcxproj
+/Week13Ass2/x64/Release
+/Week13Ass2/Week13Ass2.vcxproj.user
+/Week13Ass2/Week13Ass2.vcxproj.filters
+/Week13Ass2/Week13Ass2.vcxproj
