Updata Week14Ass1  kmeans

--- a/.gitignore
+++ b/.gitignore
@@ -210,3 +210,7 @@
 /Week13Ass2/Week13Ass2.vcxproj.user
 /Week13Ass2/Week13Ass2.vcxproj.filters
 /Week13Ass2/Week13Ass2.vcxproj
+/Week14Ass1/x64/Release
+/Week14Ass1/Week14Ass1.vcxproj.user
+/Week14Ass1/Week14Ass1.vcxproj.filters
+/Week14Ass1/Week14Ass1.vcxproj
