--- a/.gitignore
+++ b/.gitignore
@@ -214,3 +214,7 @@
 /Week14Ass1/Week14Ass1.vcxproj.user
 /Week14Ass1/Week14Ass1.vcxproj.filters
 /Week14Ass1/Week14Ass1.vcxproj
+/Week14Ass2/x64/Release
+/Week14Ass2/Week14Ass2.vcxproj.user
+/Week14Ass2/Week14Ass2.vcxproj.filters
+/Week14Ass2/Week14Ass2.vcxproj
