--- a/.gitignore
+++ b/.gitignore
@@ -218,3 +218,14 @@
 /Week14Ass2/Week14Ass2.vcxproj.user
 /Week14Ass2/Week14Ass2.vcxproj.filters
 /Week14Ass2/Week14Ass2.vcxproj
+/Week15Ass1/caffe_models
+/Week15Ass1/x64/Release
+/Week15Ass1/Week15Ass1.vcxproj.user
+/Week15Ass1/Week15Ass1.vcxproj.filters
+/Week15Ass1/Week15Ass1.vcxproj
+/Week15Ass1/yolov3.weights
+/Week15Ass1/yolov3.cfg
+/Week15Ass1/yoloTest.mp4
+/Week15Ass1/openpose_pose_coco.prototxt
+/Week15Ass1/openposeTest.mp4
+/Week15Ass1/coco.names
